fix: added media queries to the game-board div to make it responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -102,5 +102,10 @@ main {
     .box {
         font-size: 140px;
     }
+
+    #game-board {
+        height: 500px;
+        width: 500px;
+    }
 }
 
